--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       <option value="Escribir">Escribir</option>
     </select>
     <p id="textoExito">¡Gracias por llenar el formulario!<br><br>La universidad se pondrá en contacto contigo muy pronto.<br>Te invitamos a compartir tu porcentaje de candidatura con tus amigos para que puedan comparar sus resultados, dale click al icono de Whatsaap:</p>
-    <a id="btnWhatsapp" class="wa" href="https://api.whatsapp.com/send?text=Hola!%20Te%20comparto%20este%20video%20interactivo%2C%20seguro%20que%20te%20va%20a%20interesar%3A%20http%3A%2F%2Foatthegoat.co.nz%2F" target="_blank">
+    <a id="btnWhatsapp" class="wa" target="_blank">
       <img class="wa-icon" src="resources\imgs\whatsaap-icon.png" width="100px" height="100px">
     </a>
     <input onclick="crearAspirante()" class="bot" type="button" value="Enviar" id="botonEnviar">
