--- a/public/index.html
+++ b/public/index.html
@@ -72,10 +72,10 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script> 
   <script  src="./directorPrograma/API.js"></script>
-  <script  src="./main.js"></script>
+  <!--  <script  src="./main.js"></script>
   <script  src="./cambiarVid.js"></script>
   <script  src="./crearBotones.js"></script>
   <script  src="./postCandidato.js"></script>
-  <script  src="./porcentajes.js"></script>
+  <script  src="./porcentajes.js"></script> -->
 </body>
 </html>
