--- a/public/index.html
+++ b/public/index.html
@@ -18,9 +18,10 @@
 
   <header>
     <div class="overlay">
-  <h1>La Ingeniería Multimedia</h1>
-  <h3>¿No sabes qué carrera estudiar?</h3>
-  <p>Materializa todo lo que te imaginas y no pongas límites a tus ideas, pues cuentas con la infraestructura tecnológica de la UAO para dar vida a tus creaciones multimedia.</p>
+  <h1>Salvando el mar con Marina</h1>
+  <h3>Marina te enseñará sobre la importancia del Objetivo de Desarrollo Sostenible 14: Vida Submarina, para nuestro planeta.</h3>
+  <p>Esta historia interactiva tiene el propósito de enseñar a niños con edades comprendidas entre los
+    7 a 10 años acerca del Objetivo de Desarrollo Sostenible 14 a través de minijuegos.</p>
     <br>
     <!--button> id="" Saber más</button>-->
       </div>
@@ -29,7 +30,12 @@
 <div class="bg"></div>
 <div class="bg bg2"></div>
 <div class="bg bg3"></div>
-  
+
+<div class="scratch">
+<iframe src="https://scratch.mit.edu/projects/598237823/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</div>
+
+ <!-- 
   <form method="POST" action="/crear">
   <section class="datos" id="datos">
     <h4 id="tituloFormulario">Envíanos tus datos</h4>
@@ -57,7 +63,9 @@
     <input onclick="crearAspirante()" class="bot" type="button" value="Enviar" id="botonEnviar">
   </section>
   </form>
+  -->
 
+<!--
   <section class="preguntas" id="preguntas">
     <h4 id="titulopregunta">Pregunta</h4>
     <input class="preguntaboton" type="button" value="Opción 1" id="opcion1">
@@ -65,14 +73,16 @@
     <input class="preguntaboton" type="button" value="Opción 1" id="opcion3">
     <input class="preguntaboton" type="button" value="Opción 2" id="opcion4">
   </section>
+-->
 
+<!--
   <p id="textoPorcentaje"></p>
   <p class="porcentajeFinal"" id="porcentajeFinal"></p>
-
+-->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/js/all.min.js" integrity="sha256-qM7QTJSlvtPSxVRjVWNM2OfTAz/3k5ovHOKmKXuYMO4=" crossorigin="anonymous"></script> 
-  <script  src="./directorPrograma/API.js"></script>
-  <!--  <script  src="./main.js"></script>
+  <!-- <script  src="./directorPrograma/API.js"></script>
+    <script  src="./main.js"></script>
   <script  src="./cambiarVid.js"></script>
   <script  src="./crearBotones.js"></script>
   <script  src="./postCandidato.js"></script>
